remove non-working normal proxy support and add extra documentation to configuration file

--- a/noxref.conf
+++ b/noxref.conf
@@ -1,5 +1,17 @@
+# Not using standard http proxy port, as the noxref don't work as standard
+# http proxy. You _must_ use iptables DNAT to redirect traffic to the proxy.
+# For local connections, put rule into nat OUTPUT table, for example:
+#   iptables -t nat -A OUTPUT ! -d 192.168.0.0/16 -p tcp --dport 80\
+#            -o eth0 -j DNAT --to-destination XXXX:880
+# For forwarded connections, put rule into nat PREROUTING table:
+#   iptables -t nat -A PREROUTING -p tcp --dport 80 -i eth1\
+#            ! -d 192.168.0.0/16 -j DNAT --to XXXX:880
+# XXXX is address of some interface, that noxproxy listens. Checks
+# on interfaces and source/dest ips are of course local network specific
+# (eth0 interface for outer world and eth1 local network in above examples).
+
 #listen: 0.0.0.0
-#port: 3128
+#port: 880
 #uid: 65534
 #gid: 65534
 #inactivity-timeout: 300
